<resources>
    <string name="app_name">InventoryApp</string>
    <string name="product_details_label">Product Details:</string>
    <string name="product_name_hint">Name</string>
    <string name="product_model_no_hint">Model No.</string>
    <string name="minus_label">-</string>
    <string name="quantity">0</string>
    <string name="plus_label">+</string>
    <string name="price_hint">Price(in Rs.)</string>
    <string name="quantity_label">Quantity:</string>
    <string name="quantity_hint">250</string>
    <string name="quantity_text">0</string>
    <string name="image_label">Product Image:</string>
    <string name="supplier_details_label">Supplier Details:</string>
    <string name="supplier_name_hint">Name</string>
    <string name="supplier_email_id_hint">Email</string>
    <string name="order_label">order</string>
    <string name="sale_label">sell</string>
    <string name="no_product_title">Nothing here!</string>
    <string name="no_product_subtitle">Tap on the plus button to add product</string>
    <string name="main_screen_title">Products</string>
    <string name="delete_all_menu_title">Delete all products</string>
    <string name="delete_all_failed">Failed to Delete All Products</string>
    <string name="delete_all_success">Successfully Deleted All Products</string>
    <string name="delete_all_message">Delete all products?</string>
    <string name="delete_all_positive">Delete</string>
    <string name="delete_all_negative">Cancel</string>
    <string name="add_screen_title">Add a Product</string>
    <string name="edit_screen_title">Edit Product</string>
    <string name="empty_product_name">Please enter product name</string>
    <string name="empty_product_model_no">Please enter model no</string>
    <string name="invalid_quantity">Please enter valid quantity</string>
    <string name="empty_supplier_name">Please enter the supplier name</string>
    <string name="empty_supplier_email_id">Email of supplier is required</string>
    <string name="quantity_less_than_zero">Quantity cannot be less than zero</string>
    <string name="add_product_failed">Failed to add product</string>
    <string name="add_product_success">Successfully added new product</string>
    <string name="edit_product_failed">Failed to make the changes</string>
    <string name="edit_product_success">Successfully made the changes</string>
    <string name="invalid_format_message">Enter Numbers in Quantity and Price Field</string>
    <string name="delete_failed">Error in deleting Product</string>
    <string name="delete_success">Product Deleted</string>
    <string name="save_menu_title">Save</string>
    <string name="unsaved_changes_message">Discard your changes and quit editing?</string>
    <string name="unsaved_changes_positive">Discard</string>
    <string name="unsaved_changes_negative">Keep Editing</string>
    <string name="delete_menu_title">Delete</string>
    <string name="delete_message">Delete this product?</string>
    <string name="delete_positive">Delete</string>
    <string name="delete_negative">Cancel</string>
    <string name="unknown_uri">Unknown URI: </string>
    <string name="intent_type">image/*</string>
    <string name="choose_image">Choose Image</string>
    <string name="add_image_label">Add Image</string>
    <string name="image_content_description">Product Image</string>
    <string name="empty_image_content_description">Empty Inventory Image</string>
    <string name="no_change_msg">No change to be saved</string>
    <string name="out_of_stock_msg">Product out of stock</string>
    <string name="sale_failed">Could not sell</string>
    <string name="rupees_sign">\u20B9</string>
    <string name="sale_button_content_description">Sell Button</string>
    <string name="price_too_large_msg">Price too large</string>
    <string name="quantity_too_large_msg">Quantity too large</string>

</resources>
